# ControlWork

./: .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
.memory-bank/: README.md  architecture.md  backlog.md  decisions.md  project-overview.md  runbook.md
docs/: quote_sources.md
scripts/: build_linux.sh  build_windows.ps1
src/controlwork/: __init__.py  app.py  i18n.py  main.py  models.py  quote_models.py  settings.py  themed_quotes_data.py
src/controlwork/services/: autostart.py  database.py  idle.py  learning_content.py  notification.py  reminder.py  tracker.py
src/controlwork/ui/: break_overlay.py  main_window.py
tests/: test_i18n.py  test_learning_content.py  test_main_window_learning_rotation.py  test_reminder.py  test_settings.py  test_tracker.py
