[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "controlwork"
version = "0.1.0"
description = "Cross-platform work-time tracker with break reminders"
requires-python = ">=3.7"
dependencies = [
  "PySide6>=6.5.3,<6.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<8",
]

[project.scripts]
controlwork = "controlwork.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
